add Google Search Console verification file

--- a/docs.tex
+++ b/docs.tex
@@ -5,6 +5,10 @@
 \usepackage[utf8]{inputenc}
 
 \usepackage{latexml}
+% Google Search Console verification file
+\iflatexml
+\lxRequireResource[type=application/octet-stream]{googlee1709314ff1666e6.html}
+\fi
 
 \usepackage{babel}
 
