add links and alt text to GitHub shields; recompile with patched LaTeXML 0.8.6

--- a/docs.tex
+++ b/docs.tex
@@ -89,9 +89,9 @@
   Sources available on \href{https://github.com/vlmantova/bookml/}{GitHub}.
   \lxWithClass{noepub}{\bmlRawHTML{
     <br/>
-    <img src="https://img.shields.io/github/v/release/vlmantova/bookml?logo=github\&amp;display\_name=release"/>
-    <img src="https://img.shields.io/github/downloads/vlmantova/bookml/total?logo=github" class="noepub"/>
-    <img src="https://img.shields.io/github/stars/vlmantova/bookml?logo=github"/>
+    <a href="https://github.com/vlmantova/bookml/releases/latest"><img alt="Latest release" src="https://img.shields.io/github/v/release/vlmantova/bookml?logo=github\&amp;display\_name=release"/></a>
+    <img alt="Download stats" src="https://img.shields.io/github/downloads/vlmantova/bookml/total?logo=github" class="noepub"/>
+    <a href="https://github.com/vlmantova/bookml/stargazers"><img alt="Stargazers on GitHub" src="https://img.shields.io/github/stars/vlmantova/bookml?logo=github"/></a>
   }}
 
   Formats: \href{https://vlmantova.github.io/bookml/}{GitBook} (html), \href{https://vlmantova.github.io/bookml/index.plain.html}{plain} with Computer Modern (html), \href{https://vlmantova.github.io/bookml/docs.pdf}{PDF}, \href{https://vlmantova.github.io/bookml/docs.epub}{EPUB}, \href{https://github.com/vlmantova/bookml/blob/docs/docs.tex}{\LaTeX{} source}.
