--- a/bookml.sty
+++ b/bookml.sty
@@ -1,5 +1,5 @@
 % BookML: bookdown flavoured GitBook port for LaTeXML
-% Copyright (C) 2021  Vincenzo Mantova <v.l.mantova@leeds.ac.uk>
+% Copyright (C) 2021-23  Vincenzo Mantova <v.l.mantova@leeds.ac.uk>
 %
 % This program is free software: you can redistribute it and/or modify
 % it under the terms of the GNU General Public License as published by
@@ -15,7 +15,7 @@
 % along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{bookml/bookml}[2023/01/25 BookML: bookdown flavoured GitBook port for LaTeXML]
+\ProvidesPackage{bookml/bookml}[2023/02/27 BookML: bookdown flavoured GitBook port for LaTeXML]
 
 \newif\ifbml@images
 \newif\ifbml@htmlsyntax
