--- a/example/example-sans-large.tex
+++ b/example/example-sans-large.tex
@@ -1,5 +1,5 @@
 % request crop from main.tex preamble
 \def\bmlCrop{}
-% center content in a B5 page (resulting in ~19% magnification)
+% center content in a B5 page (resulting in ~1.2x magnification)
 \PassOptionsToPackage{b5,center,noinfo}{crop}
-\input{template-sans.tex}
+\input{example-sans.tex}
