--- a/template/template.tex
+++ b/template/template.tex
@@ -80,4 +80,7 @@
 Content (you may also \texttt{\textbackslash{}input} or
 \texttt{\textbackslash{}include} other files, including bibliographies).
 
+A formula:
+\[ e^{\pi i} = -1. \]
+
 \end{document}
